# jaxlnb

./: LICENSE  README.md  pyproject.toml
examples/: initialize.py  mlp_wrapper.py  mnist.ipynb
src/jaxlnb/: jaxlnb.py
