
[project]
name = "jaxlnb"
version = "1.0"
description = "Linear Neuron Boosting in JAX."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "Daniel Munoz"}]
requires-python = ">=3.11"
dependencies = ["chex", "jax", "optax"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[dependency-groups]
# Used for the examples.
dev = [
  "equinox",
  "numpy",
  "notebook",
  "optax",
  "torch",
  "torchvision",
  "xdg_base_dirs",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
